--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
         </div>
+        <i id="burger-menu" class="fa-solid fa-bars"></i>
     </nav>
     </header>
     <main>
@@ -264,6 +265,7 @@
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     </div>
+                    <i id="burger-menu2" class="fa-solid fa-bars"></i>
                     <p>© 2023 <a href="#">StoryCom</a> & MMI – <a href="#"></a>Mentions Légales</p>
                 </article>
         </section>
