--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="https://kit.fontawesome.com/2bb90c57b5.js" crossorigin="anonymous"></script>
+    <title>Page contact</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+        <img src="IMG/cropped-Art-studio.png.png" alt="Logo du site Brigitte Art">
+        <ul>
+            <li><a href="#section-1">Acceuil</a></li>
+            <li><a href="#section-2">La Galerie</a></li>
+            <li><a href="#section-3">Les oeuvres</a></li>
+            <li><a href="#section-4">Les artistes</a></li>
+            <li><a href="#section-5">Les actualités</a></li>
+            <li><a href="#footer">Contact</a></li>
+        </ul>
+        <div>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+        <i id="burger-menu" class="fa-solid fa-bars"></i>
+    </nav>
+    </header>
+    <main id="page-contact">
+        <section>
+            <article>
+                <h1>Contact</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus,
+                luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                <div>
+                    <i class="fa-solid fa-location-arrow"></i>
+                    <p>Adresse
+                    1234 N Spring St, Los Angeles, CA 90012, United
+                    States.</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <p>Téléphione
+                    +01 - 123 456 7890</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>Email
+                        mail@exemple.com</p>
+                </div>
+            </article>
+            <article>
+                <form action="">
+                    <label for="">Nom et prénom
+                        <input type="text" placeholder="Votre nom et prénom">
+                    </label>
+                    <label for="">Votre mail
+                        <input type="text" placeholder="Votre mail">
+                    </label>
+                    <label for="">Sujet
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Sujet"></textarea>
+                    </label>
+                    <button><a href="#">Envoyer</a></button>
+                </form>
+            </article>
+        </section>
+    </main>
+    <footer id="footer">
+        <section>
+            <article>
+                <img src="IMG/cropped-Art-studio.png.png" alt="">
+                <ul>
+                    <li><a href="#section-1">Acceuil</a></li>
+                    <li><a href="#section-2">La Galerie</a></li>
+                    <li><a href="#section-3">Les oeuvres</a></li>
+                    <li><a href="#section-4">Les artistes</a></li>
+                    <li><a href="#section-5">Les actualités</a></li>
+                    <li><a href="#footer">Contact</a></li>
+                </ul>
+                    <div class="reseau-footer">
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
+                    <i id="burger-menu2" class="fa-solid fa-bars"></i>
+                    <p>© 2023 <a href="#">StoryCom</a> & MMI – <a href="#"></a>Mentions Légales</p>
+                </article>
+        </section>
+        
+    </footer>
 </body>
 </html>
