--- a/index.html
+++ b/index.html
@@ -240,16 +240,18 @@
                 </article>
             </div>
         </section>
-    </main>
-    <footer id="footer">
         <section>
             <article>
                 <h2>Contactez-nous pour exposer <br>vos oeuvres dans la galerie</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dicta nostrum, ratione
                 doloremque accusantium ex, magni obcaecati vitae assumenda itaque natus tempore.
                 Eaque consequatur sunt, dolores minima earum nesciunt pariatur.</p>
-                <a class="btn-footer" href="#">Nous contacter</a>
+                <a class="btn-footer" href="/contact.html">Nous contacter</a>
             </article>
+        </section>
+    </main>
+    <footer id="footer">
+        <section>
             <article>
                 <img src="IMG/cropped-Art-studio.png.png" alt="">
                 <ul>
