--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
         <nav>
         <img src="IMG/cropped-Art-studio.png.png" alt="Logo du site Brigitte Art">
         <ul>
-            <li><a href="#section-1">Acceuil</a></li>
-            <li><a href="#section-2">La Galerie</a></li>
-            <li><a href="#section-3">Les oeuvres</a></li>
-            <li><a href="#section-4">Les artistes</a></li>
-            <li><a href="#section-5">Les actualités</a></li>
-            <li><a href="#footer">Contact</a></li>
+            <li><a href="index.html#section-1">Acceuil</a></li>
+            <li><a href="index.html#section-2">La Galerie</a></li>
+            <li><a href="index.html#section-3">Les oeuvres</a></li>
+            <li><a href="index.html#section-4">Les artistes</a></li>
+            <li><a href="index.html#section-5">Les actualités</a></li>
+            <li><a href="index.html#footer">Contact</a></li>
         </ul>
         <div>
             <a href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -71,12 +71,12 @@
             <article>
                 <img src="IMG/cropped-Art-studio.png.png" alt="">
                 <ul>
-                    <li><a href="#section-1">Acceuil</a></li>
-                    <li><a href="#section-2">La Galerie</a></li>
-                    <li><a href="#section-3">Les oeuvres</a></li>
-                    <li><a href="#section-4">Les artistes</a></li>
-                    <li><a href="#section-5">Les actualités</a></li>
-                    <li><a href="#footer">Contact</a></li>
+                    <li><a href="index.html#section-1">Acceuil</a></li>
+                    <li><a href="index.html#section-2">La Galerie</a></li>
+                    <li><a href="index.html#section-3">Les oeuvres</a></li>
+                    <li><a href="index.html#section-4">Les artistes</a></li>
+                    <li><a href="index.html#section-5">Les actualités</a></li>
+                    <li><a href="index.html#footer">Contact</a></li>
                 </ul>
                     <div class="reseau-footer">
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
