Ajoute page HTML et CSS
Ajout de la page oeuvres et la fiche css qui lui est dédié

--- a/actualite.html
+++ b/actualite.html
@@ -12,12 +12,12 @@
         <nav>
         <img src="IMG/cropped-Art-studio.png.png" alt="Logo du site Brigitte Art">
         <ul>
-            <li><a href="#section-1">Acceuil</a></li>
-            <li><a href="#section-2">La Galerie</a></li>
-            <li><a href="#section-3">Les oeuvres</a></li>
-            <li><a href="#section-4">Les artistes</a></li>
-            <li><a href="#section-5">Les actualités</a></li>
-            <li><a href="#footer">Contact</a></li>
+            <li><a href="/#section-1">Acceuil</a></li>
+            <li><a href="/#section-2">La Galerie</a></li>
+            <li><a href="/#section-3">Les oeuvres</a></li>
+            <li><a href="/#section-4">Les artistes</a></li>
+            <li><a href="/#section-5">Les actualités</a></li>
+            <li><a href="/#footer">Contact</a></li>
         </ul>
         <div>
             <a href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -27,17 +27,145 @@
         <i id="burger-menu" class="fa-solid fa-bars"></i>
     </nav>
     </header>
+    <main>
+        <section id="section-1">
+            <h1>Découvrez nos actualités</h1>
+        </section>
+        <section id="section-2">
+            <h2>Blog</h2>
+            <div id="container">
+                <article>
+                    <img src="/img/Article-1.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Voyage dans l’Art Moderne</h3>
+                        <div>
+                            <p>décembre 8, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="/img/Article-2.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Delectus non nesciunt sunt</h3>
+                        <div>
+                            <p>décembre 7, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="/img/Article-3.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Labore deleniti fugiat beatae nesciunt</h3>
+                        <div>
+                            <p>décembre 7, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="/img/Article-4.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Excepturi quo vitae quia esse</h3>
+                        <div>
+                            <p>décembre 7, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="/img/Article-5.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Et qui et aut facilis non sequi est</h3>
+                        <div>
+                            <p>décembre 7, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="/img/Article-6.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Harum rem eligendi et aut hic</h3>
+                        <div>
+                            <p>décembre 7, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="/img/Article-7.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Repellendus et consequatur nam</h3>
+                        <div>
+                            <p>décembre 7, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="/img/Article-8.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Omnis sit libero quia</h3>
+                        <div>
+                            <p>décembre 7, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="/img/Article-9.png.png" alt="">
+                    <div id="info-container">
+                        <h3>Consequuntur et voluptatem voluptatem</h3>
+                        <div>
+                            <p>décembre 7, 2023 /</p>
+                            <p>No comments</p>
+                        </div>
+                        <p>L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique,
+                        offre un périple captivant à travers les expressions contemporaines.…</p>
+                        <a href="#">Read me</a>
+                    </div>
+                </article>
+            </div>
+            <a href="#">Afficher plus</a>
+        </section>
+    </main>
     <footer id="footer">
         <section>
             <article>
                 <img src="IMG/cropped-Art-studio.png.png" alt="">
                 <ul>
-                    <li><a href="#section-1">Acceuil</a></li>
-                    <li><a href="#section-2">La Galerie</a></li>
-                    <li><a href="#section-3">Les oeuvres</a></li>
-                    <li><a href="#section-4">Les artistes</a></li>
-                    <li><a href="#section-5">Les actualités</a></li>
-                    <li><a href="#footer">Contact</a></li>
+                    <li><a href="/#section-1">Acceuil</a></li>
+                    <li><a href="/#section-2">La Galerie</a></li>
+                    <li><a href="/#section-3">Les oeuvres</a></li>
+                    <li><a href="/#section-4">Les artistes</a></li>
+                    <li><a href="/#section-5">Les actualités</a></li>
+                    <li><a href="/#footer">Contact</a></li>
                 </ul>
                     <div class="reseau-footer">
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
