--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <nav>
         <img src="IMG/cropped-Art-studio.png.png" alt="Logo du site Brigitte Art">
         <ul>
-            <li><a href="index.html#section-1">Acceuil</a></li>
+            <li><a href="/#section-1">Acceuil</a></li>
             <li><a href="index.html#section-2">La Galerie</a></li>
             <li><a href="index.html#section-3">Les oeuvres</a></li>
             <li><a href="index.html#section-4">Les artistes</a></li>
